[tool.poetry]
name = "crypto-notifier"
version = "0.1.0"
description = ""
authors = ["Mohammad Mahdi Abbasi <167798737+lmohamadabasil@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
